--- a/collections_css.css
+++ b/collections_css.css
@@ -1,3 +1,174 @@
+body {
+  margin: 0;
+  font-family: "Raleway", sans-serif;
+  background-color: #F5F5F5;
+}
+
+textarea:focus, input:focus{
+  outline: none;
+}
+
+*:focus {
+  outline: none;
+}
+
+/*
+* ----------------------------------------------------------------------------
+* ANNOUNCEMENT BAR
+* ----------------------------------------------------------------------------
+*/
+.AnnouncementBar {
+  position: relative;
+  text-align: center;
+  font-size: 10px;
+  z-index: 1;
+  background-color: black;
+}
+
+.AnnouncementBar a, :visited, ul, a {
+  list-style: none;
+  text-decoration: none;
+  color: white; 
+}
+
+.AnnouncementBar__Wrapper {
+  padding: 12px 15px;
+}
+
+.AnnouncementBar__Content {
+  color: inherit;
+  margin: 0;
+}
+
+.cart {
+  font-size: 11px;
+  letter-spacing: 0.1em;
+  text-align: right;
+  color: #fff;
+  }
+
+@media screen and (min-width: 641px) {
+  .AnnouncementBar {
+      font-size: 11px;
+  }
+}
+
+/*
+* ----------------------------------------------------------------------------
+* NAV
+* ----------------------------------------------------------------------------
+*/
+nav {
+  margin: 0;
+  max-width: 100%;
+  height: 175px;
+  flex-direction: column;
+  background-size: cover;
+  background: rgba(0, 0, 0, 0.3);
+border: 1px solid rgba(0, 0, 0, 0.1);
+text-align-last: justify;
+padding: 0 50px 0 50px;
+z-index: 2;
+}
+
+.hidden {
+  display: none;
+}
+
+#navbar {
+    z-index: 5;
+  position: fixed;
+  min-width: 100%;
+  top: 0;
+  transition: ease-in-out 0.5s;
+}
+
+.blurred {
+  backdrop-filter: blur(5px);
+  transition: ease-in-out 0.1s;
+}
+
+nav:hover {
+  background-color: rgba(0, 0, 0, 0.7);
+  transition: ease-in 0.2s;
+}
+
+
+input {
+font-family: "Raleway", sans-serif;
+width: 250px;
+height: 30px;
+background: transparent;
+font-size: 11px;
+letter-spacing: 0.1em;
+text-align: left;
+border: solid white 1px;
+}
+
+::-webkit-input-placeholder { /* Edge */
+  color: rgb(137, 137, 137);
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: rgb(137, 137, 137);
+}
+
+::placeholder {
+  color:rgb(213, 213, 213);
+}
+
+.logo {
+  width: 300px;
+  padding-top: 20px;
+  position: relative;
+  left: -6%;
+}
+
+li {
+  padding-top: 10px;
+  display: inline-block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-size: 16px;
+  letter-spacing: 0.1em;
+}
+
+ul a {
+  color: #fff;
+  text-transform: uppercase;
+  text-decoration: none;
+  letter-spacing: 0.15em;
+  
+  display: inline-block;
+  padding: 15px 20px;
+  position: relative;
+}
+
+ul a:after {    
+background: none repeat scroll 0 0 transparent;
+bottom: 0;
+content: "";
+display: block;
+height: 2px;
+left: 50%;
+position: absolute;
+background: #fff;
+transition: width 0.3s ease 0s, left 0.3s ease 0s;
+width: 0;
+}
+ul a:hover:after { 
+width: 100%; 
+left: 0; 
+}
+
+main {
+  margin-top: 250px;
+}
+
+
+
 h1 {
   font-family: "Raleway", sans-serif;
   font-weight: 300;
@@ -18,7 +189,7 @@ h3 {
   margin-bottom: 5vw;
 }
 
-section {
+.instead {
   display: flex;
   flex-direction: row;
   column-gap: 5vw;
@@ -63,3 +234,79 @@ button:hover {
   border-width: 1.5px;
   box-shadow: 0;
 }
+
+
+/*
+ * ----------------------------------------------------------------------------
+ * FOOTER
+ * ----------------------------------------------------------------------------
+ */
+
+ footer {
+  font-size: 0.7rem;
+  max-width: 100vw;
+  overflow: hidden;
+  margin: 35px 0 35px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+ }
+  
+ .footer-line {
+  display: flex;
+  justify-content: center;
+  background-color: #aed5b2;
+  width: 90vw;
+  height: 3px;
+  border-radius: 10px;
+ }
+  
+ .category-flex {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 80px;
+ }
+  
+ .footer-category {
+  display: flex;
+  flex-direction: column;
+ }
+  
+ .footer-title {
+  font-weight: 400;
+  font-size: 1rem;
+  margin-top: 35px;
+  margin-bottom: 8px;
+ }
+  
+ .footer-link {
+  text-decoration: none;
+  color: black;
+  margin-top: 5px;
+ }
+  
+ .footer-link:hover {
+  color: rgb(122, 122, 122);
+ }
+  
+ .footer-pic {
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+ }
+  
+ .footer-social {
+  display: flex;
+  width: 30px;
+  height: auto;
+ }
+  
+ .footer-pay {
+  height: 20px;
+  width: auto;
+ }
+  
+ .address-footer {
+  text-align: center;
+ }
