--- a/about_us_css.css
+++ b/about_us_css.css
@@ -1,10 +1,11 @@
 body {
   margin: 0;
   font-family: "Raleway", sans-serif;
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
 
-textarea:focus, input:focus{
+textarea:focus,
+input:focus {
   outline: none;
 }
 
@@ -25,10 +26,13 @@ textarea:focus, input:focus{
   background-color: black;
 }
 
-.AnnouncementBar a, :visited, ul, a {
+.AnnouncementBar a,
+:visited,
+ul,
+a {
   list-style: none;
   text-decoration: none;
-  color: white; 
+  color: white;
 }
 
 .AnnouncementBar__Wrapper {
@@ -45,11 +49,11 @@ span {
   letter-spacing: 0.1em;
   text-align: right;
   color: #fff;
-  }
+}
 
 @media screen and (min-width: 641px) {
   .AnnouncementBar {
-      font-size: 11px;
+    font-size: 11px;
   }
 }
 
@@ -65,10 +69,10 @@ nav {
   flex-direction: column;
   background-size: cover;
   background: rgba(0, 0, 0, 0.3);
-border: 1px solid rgba(0, 0, 0, 0.1);
-text-align-last: justify;
-padding: 0 50px 0 50px;
-z-index: 2;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  text-align-last: justify;
+  padding: 0 50px 0 50px;
+  z-index: 2;
 }
 
 .hidden {
@@ -76,7 +80,7 @@ z-index: 2;
 }
 
 #navbar {
-    z-index: 5;
+  z-index: 5;
   position: fixed;
   min-width: 100%;
   top: 0;
@@ -93,28 +97,29 @@ nav:hover {
   transition: ease-in 0.2s;
 }
 
-
 input {
-font-family: "Raleway", sans-serif;
-width: 250px;
-height: 30px;
-background: transparent;
-font-size: 11px;
-letter-spacing: 0.1em;
-text-align: left;
-border: solid white 1px;
+  font-family: "Raleway", sans-serif;
+  width: 250px;
+  height: 30px;
+  background: transparent;
+  font-size: 11px;
+  letter-spacing: 0.1em;
+  text-align: left;
+  border: solid white 1px;
 }
 
-::-webkit-input-placeholder { /* Edge */
+::-webkit-input-placeholder {
+  /* Edge */
   color: rgb(137, 137, 137);
 }
 
-:-ms-input-placeholder { /* Internet Explorer 10-11 */
+:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
   color: rgb(137, 137, 137);
 }
 
 ::placeholder {
-  color:rgb(213, 213, 213);
+  color: rgb(213, 213, 213);
 }
 
 .logo {
@@ -140,27 +145,27 @@ ul a {
   text-transform: uppercase;
   text-decoration: none;
   letter-spacing: 0.15em;
-  
+
   display: inline-block;
   padding: 15px 20px;
   position: relative;
 }
 
-ul a:after {    
-background: none repeat scroll 0 0 transparent;
-bottom: 0;
-content: "";
-display: block;
-height: 2px;
-left: 50%;
-position: absolute;
-background: #fff;
-transition: width 0.3s ease 0s, left 0.3s ease 0s;
-width: 0;
+ul a:after {
+  background: none repeat scroll 0 0 transparent;
+  bottom: 0;
+  content: "";
+  display: block;
+  height: 2px;
+  left: 50%;
+  position: absolute;
+  background: #fff;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  width: 0;
 }
-ul a:hover:after { 
-width: 100%; 
-left: 0; 
+ul a:hover:after {
+  width: 100%;
+  left: 0;
 }
 
 main {
@@ -281,7 +286,7 @@ figcaption {
  * ----------------------------------------------------------------------------
  */
 
- footer {
+footer {
   font-size: 0.7rem;
   max-width: 100vw;
   overflow: hidden;
@@ -289,63 +294,64 @@ figcaption {
   display: flex;
   flex-direction: column;
   align-items: center;
- }
-  
- .footer-line {
+}
+
+.footer-line {
   display: flex;
   justify-content: center;
   background-color: #aed5b2;
   width: 90vw;
   height: 3px;
   border-radius: 10px;
- }
-  
- .category-flex {
+}
+
+.category-flex {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   gap: 80px;
- }
-  
- .footer-category {
+}
+
+.footer-category {
   display: flex;
   flex-direction: column;
- }
-  
- .footer-title {
+}
+
+.footer-title {
   font-weight: 400;
   font-size: 1rem;
   margin-top: 35px;
   margin-bottom: 8px;
- }
-  
- .footer-link {
+}
+
+.footer-link {
   text-decoration: none;
   color: black;
   margin-top: 5px;
- }
-  
- .footer-link:hover {
+}
+
+.footer-link:hover {
   color: rgb(122, 122, 122);
- }
-  
- .footer-pic {
+}
+
+.footer-pic {
   display: flex;
   flex-direction: row;
   gap: 15px;
- }
-  
- .footer-social {
+}
+
+.footer-social {
   display: flex;
   width: 30px;
   height: auto;
- }
-  
- .footer-pay {
+}
+
+.footer-pay {
   height: 20px;
   width: auto;
- }
-  
- .address-footer {
+}
+
+.address-footer {
   text-align: center;
- }
+  font-size: 0.7rem;
+}
