--- a/checkout.css
+++ b/checkout.css
@@ -1,7 +1,18 @@
+* {
+  font-family: "Raleway", sans-serif;
+  font-size: 16px;
+}
+
 body {
   margin: 0;
   font-family: "Raleway", sans-serif;
   background-color: #f5f5f5;
+}
+
+main {
+  margin-top: 250px;
+  padding-left: 50px;
+  padding-right: -50px;
 }
 
 textarea:focus,
@@ -44,7 +55,7 @@ a {
   margin: 0;
 }
 
-.cart {
+span {
   font-size: 11px;
   letter-spacing: 0.1em;
   text-align: right;
@@ -97,7 +108,7 @@ nav:hover {
   transition: ease-in 0.2s;
 }
 
-input {
+#search {
   font-family: "Raleway", sans-serif;
   width: 250px;
   height: 30px;
@@ -168,266 +179,99 @@ ul a:hover:after {
   left: 0;
 }
 
-main {
-  margin-top: 250px;
-}
-
-h3 {
-  font-family: "Raleway", sans-serif;
-  font-weight: 300;
-  letter-spacing: 5px;
-  font-size: 3.2vw;
-  color: #000000;
-  text-align: center;
-  margin-bottom: 5vw;
-}
-
-h4 {
-  font-family: "Raleway", sans-serif;
-  font-size: 1.8vw;
+h1 {
   font-weight: 400;
-  margin-top: -1vw;
-}
-
-p {
-  font-family: "Raleway", sans-serif;
-  font-size: 1.2vw;
-  -webkit-text-stroke: #707070;
-  letter-spacing: 2px;
-  margin-left: 0.8vw;
-}
-
-img {
-  width: 23vw;
-  height: 23vw;
-}
-
-.instead {
-  display: grid;
-  grid-template-columns: max-content auto max-content;
-  margin-left: 7vw;
-  margin-right: 7vw;
-  margin-bottom: 10vw;
-}
-
-.info {
+  font-size: 40px;
   display: flex;
-  flex-direction: column;
-  margin-left: 3vw;
+  justify-content: center;
+  margin-bottom: 50px;
 }
 
-.disappear {
-  display: none;
+.form-shipping {
+  width: 600px;
+  /* margin-left: 50px; */
 }
 
-.square {
-  height: 1.5vw;
-  width: 1.5vw;
-  border-style: ridge;
-  border-color: black;
-  border-width: 0.15vw;
-  border-radius: 20%;
-  cursor: pointer;
-  margin-left: 1vw;
-  margin-top: 1.1vw;
-}
-
-.color {
-  display: flex;
-  flex-direction: row;
-}
-
-.turquoise {
-  background-color: #a5e4d3;
-}
-
-.yellow {
-  background-color: #f1e19d;
-}
-
-.price {
-  font-size: 1.4vw;
-  font-weight: 600;
-}
-
-.underline {
-  text-decoration-line: line-through;
-}
-
-.amount {
-  display: flex;
-  flex-direction: column;
-  margin-top: 10.5vw;
-}
-
-.count {
-  display: flex;
-  flex-direction: row;
-  align-self: flex-end;
-  font-family: "Raleway", sans-serif;
-  font-weight: 300;
-  -webkit-text-stroke: #707070;
-  letter-spacing: 2px;
-}
-
-.minus {
-  font-size: 3.5vw;
-  border-bottom-style: solid;
-  border-left-style: solid;
-  border-top-style: solid;
-  border-color: #aed5b2;
-  border-width: 1.5px;
-  padding-left: 1vw;
-  padding-right: 1vw;
-  margin-bottom: 0.2vw;
-  margin-top: 0.2vw;
-}
-
-.minus:hover {
-  cursor: pointer;
-  background-color: #aed5b2;
-  border-color: #aed5b2;
-  color: #000000;
-  border-color: #aed5b2;
-  border-width: 1.5px;
-  box-shadow: 0;
-}
-
-.number {
-  font-size: 2vw;
-  border-bottom-style: solid;
-  border-top-style: solid;
-  border-color: #aed5b2;
-  border-width: 1.5px;
-  padding-left: 0.7vw;
-  padding-right: 0.7vw;
-  margin-bottom: 0.2vw;
-  margin-top: 0.2vw;
-  padding-top: 0.8vw;
-}
-
-.plus {
-  font-size: 3.5vw;
-  border-bottom-style: solid;
-  border-right-style: solid;
-  border-top-style: solid;
-  border-color: #aed5b2;
-  border-width: 1.5px;
-  padding-left: 1vw;
-  padding-right: 1vw;
-  margin-bottom: 0.2vw;
-  margin-top: 0.2vw;
-  padding-top: 0.2vw;
-}
-
-.plus:hover {
-  cursor: pointer;
-  background-color: #aed5b2;
-  border-color: #aed5b2;
-  color: #000000;
-  border-color: #aed5b2;
-  border-width: 1.5px;
-  box-shadow: 0;
-}
-
-.amount button {
-  font-family: "Raleway", sans-serif;
-  font-size: 1vw;
-  border-color: #000000;
-  background-color: white;
-  color: #000000;
-  border-width: 1.5px;
-  padding-top: 0.8vw;
-  padding-bottom: 0.8vw;
-  padding-right: 1.2vw;
-  padding-left: 1.2vw;
-  letter-spacing: 2.5px;
-  margin-top: 3.5vw;
-  box-shadow: 0;
-}
-
-.amount button:hover {
-  cursor: pointer;
-  background-color: black;
-  border-color: black;
-  color: white;
-  border-width: 1.5px;
-  box-shadow: 0;
-}
-
-.pay {
-  display: flex;
-  flex-direction: column;
+.form-input,
+#country,
+textarea {
+  padding: 10px 10px;
+  border: 1px black solid;
+  margin-top: 10px;
+  margin-bottom: 10px;
   background-color: #f5f5f5;
-  font-size: 1.6vw;
-  padding-left: 65vw;
-  padding-bottom: 3vw;
-  padding-top: 2vw;
-  margin-top: 2vw;
-  margin-left: 0;
-  margin-right: 0;
 }
 
-#ship {
-  border-bottom-style: solid;
-  border-color: #aed5b2;
-  border-width: 0.2vw;
-  padding-bottom: 1vw;
-  padding-left: 1.5vw;
-  margin-right: 2vw;
+.individual-form {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
-.moveRight {
-  padding-left: 1.5vw;
-}
-
-.pay button {
-  font-family: "Raleway", sans-serif;
-  font-size: 1vw;
-  border-color: #000000;
+button {
   background-color: #000000;
+  border-color: #000000;
   color: white;
-  border-width: 1.5px;
+  letter-spacing: 2.5px;
+  box-shadow: 0;
   width: 250px;
   height: 50px;
-  letter-spacing: 2.5px;
-  margin-top: 3.5vw;
-  margin-left: auto;
-  margin-right: auto;
-  box-shadow: 0;
-  max-width: 20vw;
 }
 
-.pay button:hover {
+button:hover {
   cursor: pointer;
+  letter-spacing: 2.5px;
   background-color: white;
-  border-color: black;
-  color: black;
+  border-color: white;
+  color: #000000;
+  border-color: #000000;
   border-width: 1.5px;
   box-shadow: 0;
 }
 
-/*
- * ----------------------------------------------------------------------------
- * FOOTER
- * ----------------------------------------------------------------------------
- */
+.submitbutton {
+  margin-left: 175px;
+  margin-top: 30px;
+}
+
+select {
+  background: none;
+  -moz-appearance: none; /* Firefox */
+  -webkit-appearance: none; /* Safari and Chrome */
+  appearance: none;
+  padding-right: 20px;
+  position: relative;
+  margin-top: 5px;
+}
+
+select {
+  background-image: url("img/Component\ 1.svg");
+  background-repeat: no-repeat, repeat;
+  background-position: right 1.5em top 50%, 0 0;
+  background-size: 0.65em auto, 100%;
+}
+
+.address-category,
+.contact-category {
+  margin-top: 50px;
+}
 
 footer {
-  font-size: 0.7rem;
   max-width: 100vw;
   overflow: hidden;
   margin: 35px 0 35px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-size: 0.7rem;
 }
 
 .footer-line {
   display: flex;
   justify-content: center;
   background-color: #aed5b2;
-  width: 90vw;
+  width: 1300px;
   height: 3px;
   border-radius: 10px;
 }
@@ -440,6 +284,7 @@ footer {
 }
 
 .footer-category {
+  margin-bottom: 10px;
   display: flex;
   flex-direction: column;
 }
@@ -471,6 +316,7 @@ footer {
   display: flex;
   width: 30px;
   height: auto;
+  gap: 15px;
 }
 
 .footer-pay {
@@ -480,11 +326,150 @@ footer {
 
 .address-footer {
   text-align: center;
-  font-size: 0.7rem;
+}
+.payment-div {
+  display: flex;
+}
+
+.active-payment {
+  border: 3px solid #acd5b5;
+  border-radius: 5px;
+  height: 150px;
+  width: 300px;
+  margin-right: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.inactive-payment {
+  border: 1px solid #cccccc;
+  border-radius: 5px;
+  height: 154px;
+  width: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.payment-choice {
+  height: 70px;
+  width: auto;
+}
+
+h3 {
+  font-weight: 400;
+  font-size: 20px;
+  color: #7f7f7f;
+  margin-top: 50px;
+}
+
+.form-billing {
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+}
+
+.city-group {
+  display: flex;
+  gap: 20px;
+}
+
+.city-form {
+  /* width: 150px; */
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+
+.city-form2 {
+  /* width: 150px; */
+  width: 300px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+/* .page-wrap {
+  display: flex;
+  justify-content: space-evenly;
+} */
+
+.card-left {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 300px;
+}
+
+.visa-payment {
+  height: 20px;
+  width: auto;
+}
+
+.visa-wrap {
+  border: 1px solid black;
+  height: 40px;
+  width: 100px;
+  margin-top: 34px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 20px;
+}
+
+.card-wrap {
+  display: flex;
+}
+
+.form-billing-right {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.form-date {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+#expiry-month,
+#expiry-year {
+  width: 200px;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+
+#expiry-month {
+  margin-right: 20px;
+}
+
+.formdate-wrap {
+  display: flex;
+  flex-direction: row;
+}
+
+.cvv-form {
+  display: flex;
+  flex-direction: column;
+  width: 190px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.payment-wrap {
+  display: flex;
+  /* flex-direction: column; */
+  /* justify-content: space-between; */
+  gap: 150px;
 }
 
 .payment-total-div {
   margin-top: 50px;
+  margin-left: -50px;
   height: 400px;
   width: 100vw;
   background-color: #f5f5f5;
@@ -499,7 +484,6 @@ footer {
   font-size: 20px;
   margin-top: 10px;
   margin-bottom: 10px;
-  font-weight: 500;
 }
 
 .payment-total-flex {
@@ -527,8 +511,63 @@ footer {
   margin-top: 40px;
 }
 
-.checkout-button {
-  margin-top: 30px;
+.column-bag {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.pic-left {
+  width: 130px;
+  height: auto;
+}
+
+.main-pic {
+  width: 500px;
+  height: auto;
+  max-height: 520px;
+  margin-left: 50px;
+  margin-right: 70px;
+}
+
+.pic-group {
+  display: flex;
+}
+
+.pic-selector {
+  height: 130px;
+  width: 20px;
+  background-color: black;
+}
+
+.product-title {
+  font-weight: 400;
+  font-size: 40px;
+  margin-top: 0;
+  margin-bottom: -20px;
+  justify-content: flex-start;
+}
+
+.product-price {
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.product-detail {
+  width: 80%;
+}
+
+.product-detail2 {
+  margin-bottom: 0;
+}
+
+.product-detail3 {
+  margin: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.buy-product {
   background-color: #000000;
   border-color: #000000;
   color: white;
@@ -538,13 +577,57 @@ footer {
   height: 50px;
 }
 
-.checkout-button:hover {
+.buy-product:hover {
   cursor: pointer;
-  letter-spacing: 2.5px;
   background-color: white;
   border-color: white;
   color: #000000;
   border-color: #000000;
   border-width: 1.5px;
   box-shadow: 0;
+}
+
+.add-cart {
+  background-color: white;
+  border-color: white;
+  color: #000000;
+  border-color: #000000;
+  border-width: 1.5px;
+  box-shadow: 0;
+  width: 250px;
+  height: 50px;
+  letter-spacing: 2.5px;
+}
+
+.add-cart:hover {
+  background-color: #000000;
+  border-color: #000000;
+  color: white;
+  letter-spacing: 2.5px;
+  box-shadow: 0;
+}
+
+.productbuttonwrap {
+  display: flex;
+  gap: 20px;
+  margin-top: 28px;
+}
+
+.product-body {
+  margin-top: 100px;
+}
+
+.available-products {
+  display: flex;
+  gap: 10px;
+}
+
+.bag-pic {
+  width: 80px;
+
+  margin-bottom: 100px;
+}
+
+.active-bag {
+  border: 3px solid #acd5b5;
 }
